--- a/templates/hostingstart.html
+++ b/templates/hostingstart.html
@@ -1,10 +1,31 @@
 ﻿<html>
 	<head>
-		<title>Sayantan's WebApp</title>
+		<title>Mendak's WebApp</title>
 	</head>
 	<body>
-		<div>
-			<h2>Kachuyi, I ❤ You!</h2>
-		</div>
+		<style type="text/css">
+			.tg  {border-collapse:collapse;border-spacing:0;}
+			.tg td{font-family:Arial, sans-serif;font-size:14px;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+			.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
+			.tg .tg-gzlc{font-size:32px;border-color:#000000;text-align:center;vertical-align:top}
+			.tg .tg-eshq{font-size:10px;border-color:#000000;text-align:left;vertical-align:top}
+			.tg .tg-73oq{border-color:#000000;text-align:left;vertical-align:top}
+			.tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
+			</style>
+			<table class="tg">
+			  <tr>
+				<th class="tg-73oq" colspan="3">Pyari Kachuyi,</th>
+			  </tr>
+			  <tr>
+				<td class="tg-73oq"></td>
+				<td class="tg-0pky" colspan="2">I propose ki hum dono, saath milkar, Coding, Algo, DS kare. FTE le, roka kare, Shaadi kare (I'll officially become private protected).<br><br>Fir hum dono ghumenge, date marenge, pyaar karenge, haq se PDA karenge!</td>
+			  </tr>
+			  <tr>
+				<td class="tg-eshq" colspan="3"></td>
+			  </tr>
+			  <tr>
+				<td class="tg-gzlc" colspan="3">Happy Propose Day! ❤😘</td>
+			  </tr>
+			</table>
 	</body>
 </html>
