--- a/templates/hostingstart.html
+++ b/templates/hostingstart.html
@@ -14,7 +14,7 @@
 			</style>
 			<table class="tg">
 			  <tr>
-				<th class="tg-73oq" colspan="3">Pyari Kachuyi,</th>
+				<th class="tg-73oq" colspan="3">Pyari Kachuyi 🐢,</th>
 			  </tr>
 			  <tr>
 				<td class="tg-73oq"></td>
