--- a/templates/hostingstart.html
+++ b/templates/hostingstart.html
@@ -12,7 +12,7 @@
 			.tg .tg-73oq{border-color:#000000;text-align:left;vertical-align:top}
 			.tg .tg-0pky{border-color:inherit;text-align:left;vertical-align:top}
 			</style>
-			<table class="tg">
+			<table class="tg" style="border-collapse:collapse">
 			  <tr>
 				<th class="tg-73oq" colspan="3">Pyari Kachuyi 🐢,</th>
 			  </tr>
