--- a/templates/hostingstart.html
+++ b/templates/hostingstart.html
@@ -9,11 +9,13 @@
 			.tg th{font-family:Arial, sans-serif;font-size:14px;font-weight:normal;padding:10px 5px;border-style:solid;border-width:1px;overflow:hidden;word-break:normal;border-color:black;}
 			.tg .tg-sttc{font-size:32px;border-color:#ffffff;text-align:center;vertical-align:top}
 			.tg .tg-zv4m{border-color:#ffffff;text-align:left;vertical-align:top}
+			.tg .tg-b8y7{font-size:20px;border-color:#ffffff;text-align:center;vertical-align:top}
 			.tg .tg-iao2{font-size:10px;border-color:#ffffff;text-align:left;vertical-align:top}
+			.tg .tg-ofj5{border-color:#ffffff;text-align:right;vertical-align:top}
 			</style>
 			<table class="tg">
 			  <tr>
-				<th class="tg-zv4m" colspan="3">Pyari Kachuyi 🐢,</th>
+				<th class="tg-zv4m" colspan="3">Pyari Kachuyi,</th>
 			  </tr>
 			  <tr>
 				<td class="tg-zv4m"></td>
@@ -23,7 +25,13 @@
 				<td class="tg-iao2" colspan="3"></td>
 			  </tr>
 			  <tr>
-				<td class="tg-sttc" colspan="3">Happy Propose Day! ❤😘</td>
+				<td class="tg-sttc" colspan="3">Happy Propose Day! ❤😘🐸</td>
+			  </tr>
+			  <tr>
+				<td class="tg-b8y7" colspan="3">February 8th, 2020.</td>
+			  </tr>
+			  <tr>
+				<td class="tg-ofj5" colspan="3">Yours truly,<br>Forever,<br>Mendak</td>
 			  </tr>
 			</table>
 	</body>
