--- a/templates/hostingstart.html
+++ b/templates/hostingstart.html
@@ -15,7 +15,7 @@
 			</style>
 			<table class="tg">
 			  <tr>
-				<th class="tg-zv4m" colspan="3">Pyari Kachuyi,</th>
+				<th class="tg-zv4m" colspan="3">Pyari Kachuyi 🐢,</th>
 			  </tr>
 			  <tr>
 				<td class="tg-zv4m"></td>
