--- a/templates/hostingstart.html
+++ b/templates/hostingstart.html
@@ -25,13 +25,13 @@
 				<td class="tg-iao2" colspan="3"></td>
 			  </tr>
 			  <tr>
-				<td class="tg-sttc" colspan="3">Happy Propose Day! ❤😘🐸</td>
+				<td class="tg-sttc" colspan="3">Happy Propose Day! ❤😘</td>
 			  </tr>
 			  <tr>
 				<td class="tg-b8y7" colspan="3">February 8th, 2020.</td>
 			  </tr>
 			  <tr>
-				<td class="tg-ofj5" colspan="3">Yours truly,<br>Forever,<br>Mendak</td>
+				<td class="tg-ofj5" colspan="3">Yours truly,<br>Forever,<br>Mendak 🐸</td>
 			  </tr>
 			</table>
 	</body>
