--- a/templates/index.html
+++ b/templates/index.html
@@ -31,7 +31,7 @@
     {% endfor %}
     </table>
     {% endif %}
-    <div class = "form"></div>
+    <div class = "form">
         <form action="/" method="POST">
             <input type="text" name="content" id="content">
             <input type="submit" value="Add Task">
