--- a/templates/update.html
+++ b/templates/update.html
@@ -1,19 +1,18 @@
 {% extends 'base.html' %}
 
 {% block head %}
-    <title>
-        UTO Web App Sample
-    </title>
+<title>Task Master</title>
 {% endblock %}
 
 {% block body %}
 <div class="content">
-    <h1 style="text-align: center">Update World!</h1>
+    <h1 style="text-align: center">Update Task</h1>
+
+    <div class="form">
         <form action="/update/{{task.id}}" method="POST">
-        <input type="text" name="content" id="content" value="{{task.content}}">
-        <input type="submit" value="Add Task">
-    </form>
+            <input type="text" name="content" id="content" value="{{task.content}}">
+            <input type="submit" value="Update">
+        </form>
+    </div>
 </div>
-
-
 {% endblock %}
